# multi-agent-sdk

./: .gitignore  main.py  pyproject.toml  test_cases.py
agent-scope/: agentscope_multi_agents.py  agentscope_multi_agents_test.py
autogen/: autogen_multi_agents.py  autogen_multi_agents_test.py
openai-agents-sdk/: agent_recognition_test.py  air_compressor_station_agents.py  openai_multi_agents.py  openai_multi_agents_test.py
openai-agents-sdk/sessions/: recognition_test.db
