[project]
name = "multi-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=1.0.16",
    "autogen-agentchat>=0.5.7",
    "autogen-ext[openai]>=0.5.7",
    "autogenstudio>=0.4.2.2",
    "openai-agents>=0.10.2",
]
